grafanaIngress/grafanaIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    ingress.cilium.io/loadbalancer-mode: "shared"
    cert-manager.io/issuer: letsencrypt-staging
spec:
  ingressClassName: cilium
  tls:
   - hosts:
     - grafana.greypixel.nl
     secretName: letsencrypt-grafana
  rules:
    - host: grafana.greypixel.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
